2013-03-19  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: fix thread cancel race.  Exiting a worker my race with
	cancelling that same worker.  This caused a segmenation
	fault. Reported and tested by Anatol Pomozov

2011-02-02  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: In fuse_session_loop_mt() don't pause when exiting the
	worker threads.  The pause() was added in 2.2.1 to prevent
	segfault on pthread_cancel() on an exited, detached thread.  Now
	worker threads are not detached and pthread_cancel() should work
	fine even after the thread exited.  Reported by Boris Protopopov

2012-01-25  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.7

2012-01-02  Miklos Szeredi <miklos@szeredi.hu>

	* Remove unnecessary mutex unlock at the end of multithreaded
	event loop.

2011-12-09  Miklos Szeredi <miklos@szeredi.hu>

	* Fix hang in wait_on_path().  Reported by Ville Silventoinen

2011-10-13  Miklos Szeredi <miklos@szeredi.hu>

	* Reply to request with ENOMEM in case of failure to allocate
	request structure.  Otherwise the task issuing the request will
	just freeze up until the filesystem daemon is killed.  Reported by
	Stephan Kulow

2011-09-13  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.6

2011-08-26  Miklos Szeredi <miklos@szeredi.hu>

	* If configured with --disable-mtab then don't call mount(8) from
	libfuse to update the mtab.  Reported by: James Sierp

2011-01-31  Miklos Szeredi <miklos@szeredi.hu>

	* Always call umount with --no-canonicalize --fake options to
	prevent symlink attacks at umount.  util-linux >= 2.18 or a
	suitably patched version is required.

	* Always call mount with --no-canonicalize option to prevent
	symlink attacks on mount.

	* In case of failure to add to /etc/mtab use same mountpoint for
	cleanup as for mounting.  Reported by Marc Deslauriers

2010-11-08  Miklos Szeredi <miklos@szeredi.hu>

	* Open /dev/null for write instead of read for redirecting stdout
	and stderr

2010-10-14  Miklos Szeredi <miklos@szeredi.hu>
