@@ -1,3 +1,8 @@
+2015-05-22  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: fix exec environment for mount and umount.  Found by
+	Tavis Ormandy (CVE-2015-3202).
+
 2013-03-19  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: fix thread cancel race.  Exiting a worker my race with
